Add tenant-scoped leave management across API, totals, and schedule UI

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "node server.js",
     "check": "node --check app.js && node --check server.js",
-    "test": "node --test schedule_calculations.test.js"
+    "test": "node --test schedule_calculations.test.js leave_utils.test.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
